--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,5 +1,13 @@
 @font-face {
   font-family: "RFDewi";
+  src: url(../fonts/RFDewiExpanded-Light.woff2),
+  url(../fonts/RFDewiExpanded-Light.woff);
+  font-weight: 300;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "RFDewi";
   src: url(../fonts/RFDewiExpanded-Regular.woff2),
   url(../fonts/RFDewiExpanded-Regular.woff);
   font-weight: 400;
@@ -9,8 +17,16 @@
 @font-face {
   font-family: "RFDewi";
   src: url(../fonts/RFDewiExpanded-Bold.woff2),
-  url(../fonts/RFDewiExtended-Bold.woff);
+  url(../fonts/RFDewiExpanded-Bold.woff);
   font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "RFDewi";
+  src: url(../fonts/RFDewiExpanded-Semibold.woff2),
+  url(../fonts/RFDewiExpanded-Semibold.woff);
+  font-weight: 600;
   font-display: swap;
   font-style: normal;
 }
