--- a/app/scss/pages/team.scss
+++ b/app/scss/pages/team.scss
@@ -5,7 +5,7 @@
     padding-right: 80px;
   }
   &__title {
-    color: #a4a6a9;
+    color: var(--list);
     font-weight: 400;
     font-size: 32px;
     line-height: 150%;
@@ -33,7 +33,8 @@
     max-width: 480px;
     width: 100%;
     padding: 17px 19px 19px 21px;
-    background: #191919;
+    background: var(--team);
+    color: var(--list);
     border-radius: 20px;
     display: flex;
     gap: 22px;
@@ -69,7 +70,6 @@
     }
     &-name {
       display: flex;
-      color: #a4a6a9;
       font-size: 26px;
       line-height: 31px;
       font-weight: 700;
@@ -81,7 +81,6 @@
       font-weight: 300;
       font-size: 18px;
       line-height: 22px;
-      color: #a4a6a9;
     }
   }
 }
@@ -90,6 +89,13 @@
     .container {
       padding-left: 20px;
       padding-right: 20px;
+    }
+  }
+  @media (max-width: 768px) {
+    .team__item-title {
+      font-size: 27px;
+      font-weight: 400;
+      line-height: 42px;
     }
   }
   @media (max-width: 500px) {
@@ -101,15 +107,13 @@
     .team__member {
       flex-direction: column;
       gap: 15px;
-      &-img{
+      &-img {
         width: 180px;
         height: 180px;
+        flex-shrink: 0;
       }
       &-sertificats {
         position: static;
-      }
-      &-text{
-
       }
       &-name {
         flex-direction: row;
