--- a/app/scss/header/header.scss
+++ b/app/scss/header/header.scss
@@ -24,7 +24,7 @@
     height: 100%;
   }
   .container {
-    padding: 60px 80px 45px;
+    padding: 30px 80px 45px;
     margin: 0 auto;
     position: relative;
     height: 100vh;
@@ -180,8 +180,8 @@
   }
   &__links {
     position: fixed;
-    right: 93px;
-    top: 75px;
+    right: 80px;
+    top: 45px;
     z-index: 2;
     .link-phone {
       font-family: RFDewi, Arial, sans-serif;
@@ -196,6 +196,7 @@
     padding: 10px 40px;
     border: 1px solid #4d4e4f;
     color: var(--color--contrast-low);
+    background-color: var(--bg);
     border-radius: 123px;
     font-weight: 400;
     font-size: 18px;
