--- a/app/scss/modal.scss
+++ b/app/scss/modal.scss
@@ -1,6 +1,7 @@
 .modal-overlay-sertificat,
 .modal-overlay-video,
-.modal-overlay-order {
+.modal-overlay-order,
+.modal-overlay-team {
 	position: fixed;
 	left: 0;
 	top: 0;
