--- a/app/scss/pages/prices.scss
+++ b/app/scss/pages/prices.scss
@@ -36,13 +36,11 @@
     &-name {
       width: 264px;
       position: relative;
-      padding-bottom: 48px;
+      padding-top: 15px;
+      padding-bottom: 15px;
       padding-right: 24px;
       display: block;
       flex-shrink: 0;
-      &:first-child {
-        padding-top: 48px;
-      }
       &::after {
         position: absolute;
         content: "";
@@ -129,8 +127,8 @@
       .premium,
       .express {
         &.rate {
-          padding-bottom: 0;
-          height: 165px;
+          height: 190px;
+          padding-right: 10px;
           background-color: var(--bg);
         }
       }
