--- a/app/scss/pages/team.scss
+++ b/app/scss/pages/team.scss
@@ -43,6 +43,7 @@
       height: 136px;
       border-radius: 10px;
       overflow: hidden;
+      cursor: pointer;
       img {
         object-fit: cover;
         width: 100%;
@@ -82,6 +83,25 @@
       font-size: 18px;
       line-height: 22px;
     }
+  }
+  &__slider {
+     &-img {
+      max-width: 960px;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+      margin-left: 20px;
+      margin-right: 20px;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: top;
+      }
+    }
+  }
+  .modal__team{
+    max-width: 960px;
   }
 }
 .team.media {
