--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -33,6 +33,7 @@
   --bg-panel4d4e4f: #4d4e4f;
   --menu-btn: #282828;
   --list: #282828;
+  --list2: #282828;
   --price: #282828;
   --color--contrast-low-white: #d6d6d6;
   --color--contrast-low-d6d6d6: #ffffff;
@@ -77,6 +78,7 @@
     --bg-panel4d4e4f: #ffffff;
     --menu-btn: #ffffff;
     --list: #a4a6a9;
+    --list2: #818181;
     --price: #ffffff;
     --color--contrast-low-white: #ffffff;
     --color--contrast-low-d6d6d6: #d6d6d6;
