--- a/app/scss/modal.scss
+++ b/app/scss/modal.scss
@@ -1,7 +1,8 @@
 .modal-overlay-sertificat,
 .modal-overlay-video,
 .modal-overlay-order,
-.modal-overlay-team {
+.modal-overlay-team,
+.modal-overlay-sertificats {
 	position: fixed;
 	left: 0;
 	top: 0;
