--- a/app/scss/pages/team.scss
+++ b/app/scss/pages/team.scss
@@ -63,6 +63,11 @@
       border-radius: 3px;
       overflow: hidden;
       opacity: 0.55;
+      cursor: pointer;
+      transition: .3s;
+      &:hover{
+        opacity: 1;
+      }
       img {
         object-fit: cover;
         width: 100%;
@@ -88,7 +93,7 @@
      &-img {
       max-width: 960px;
       width: 100%;
-      height: 100vh;
+      height: 95vh;
       overflow: hidden;
       margin-left: 20px;
       margin-right: 20px;
@@ -102,6 +107,27 @@
   }
   .modal__team{
     max-width: 960px;
+  }
+  .modal__sertificats{
+    max-width: 560px;
+  }
+  .sertificats__slider{
+    overflow: hidden;
+    .slick-slide{
+      overflow: hidden;
+    }
+    &-img{
+      max-width: 560px;
+      width: 100%;
+      height: auto;
+      overflow: hidden;
+      img{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        object-position: top;
+      }
+    }
   }
 }
 .team.media {
