--- a/app/scss/header/header.scss
+++ b/app/scss/header/header.scss
@@ -5,12 +5,12 @@
   height: 100vh;
   .top-line {
     width: 100%;
-    height: 62px;
+    height: 82px;
     position: fixed;
     top: 0;
     left: 0;
-    background: var(--line-bg);
-    display: none;
+    background: #131313;
+    // display: none;
     z-index: 9;
   }
   &__bg {
@@ -182,7 +182,7 @@
     position: fixed;
     right: 80px;
     top: 45px;
-    z-index: 2;
+    z-index: 10;
     .link-phone {
       font-family: RFDewi, Arial, sans-serif;
       font-weight: 400;
@@ -209,7 +209,7 @@
     font-weight: 800;
     font-size: 74px;
     line-height: 89px;
-    color: var(--color--contrast-low);
+    color: #D6D6D6;
     font-family: RFDewi, Arial, sans-serif;
     margin-bottom: 50px;
   }
@@ -344,6 +344,8 @@
     }
     .top-line {
       display: flex;
+      height: 62px;
+      background: #000;
     }
     .header__logo {
       width: 120px;
