--- a/app/scss/pages/team.scss
+++ b/app/scss/pages/team.scss
@@ -56,18 +56,18 @@
       bottom: 20px;
       display: flex;
       gap: 10px;
+      opacity: 0.55;
+      transition: .3s;
+      &:hover{
+        opacity: 1;
+      }
     }
     &-sertificat {
       width: 34px;
       height: 26px;
       border-radius: 3px;
       overflow: hidden;
-      opacity: 0.55;
       cursor: pointer;
-      transition: .3s;
-      &:hover{
-        opacity: 1;
-      }
       img {
         object-fit: cover;
         width: 100%;
@@ -112,20 +112,44 @@
     max-width: 560px;
   }
   .sertificats__slider{
-    overflow: hidden;
+    position: relative;
     .slick-slide{
-      overflow: hidden;
     }
     &-img{
-      max-width: 560px;
+      max-width: 560px!important;
       width: 100%;
-      height: auto;
-      overflow: hidden;
+      height: 90vh;
+      margin-right: 10px;
+      margin-left: 10px;
       img{
-        object-fit: cover;
+        object-fit: contain;
         width: 100%;
         height: 100%;
-        object-position: top;
+        object-position: center center;
+      }
+    }
+    .sertificat-arrow{
+      position: absolute;
+      width: 100px;
+      height: 100%;
+      z-index: 999;
+      text-align: center;
+      cursor: pointer;
+      opacity: .6;
+      transition: .3s;
+      &:hover{
+        opacity: 1;
+      }
+      &-prew{
+        left: -100px;
+        top: 0;
+      }
+      &-next{
+        right: -100px;
+        top: 0;
+        img{
+          transform: rotate(180deg);
+        }
       }
     }
   }
