--- a/app/scss/modal.scss
+++ b/app/scss/modal.scss
@@ -8,7 +8,7 @@
 	top: 0;
 	right: 0;
 	bottom: 0;
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: rgba(0, 0, 0, 0.9);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -17,9 +17,9 @@
 	opacity: 0;
 	visibility: hidden;
 	transition: all 0.3s ease-in-out;
-  z-index: 2;
+  z-index: 990;
   overflow-y: auto;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 .modals{
   z-index: 2;
