--- a/app/scss/pages/team.scss
+++ b/app/scss/pages/team.scss
@@ -90,6 +90,7 @@
     }
   }
   &__slider {
+    position: relative;
      &-img {
       max-width: 960px;
       width: 100%;
@@ -104,9 +105,36 @@
         object-position: top;
       }
     }
+    .team-arrow{
+      position: absolute;
+      width: 100px;
+      height: 10%;
+      z-index: 999;
+      text-align: center;
+      cursor: pointer;
+      opacity: .6;
+      transition: .3s;
+      &:hover{
+        opacity: 1;
+      }
+      &-prew{
+        left: -100px;
+        top: 50%;
+        padding-left: 20px;
+      }
+      &-next{
+        right: -100px;
+        top: 50%;
+        padding-right: 20px;
+        img{
+          transform: rotate(180deg);
+        }
+      }
+    }
   }
   .modal__team{
     max-width: 960px;
+    z-index: 20;
   }
   .modal__sertificats{
     max-width: 560px;
@@ -153,6 +181,21 @@
       }
     }
   }
+  .modal__team-close{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    z-index: 999;
+    opacity: .5;
+    cursor: pointer;
+    background-image: url(../img/svg/close.svg);
+    transition: .3s;
+    &:hover{
+      opacity: 1;
+    }
+  }
 }
 .team.media {
   @media (max-width: 1350px) {
@@ -161,11 +204,78 @@
       padding-right: 20px;
     }
   }
+  @media (max-width: 1250px){
+    .modal__team{
+      max-width: 800px;
+    }
+    .team__slider-img img{
+      width: 800px;
+    }
+  }
+  @media (max-width: 1050px){
+    .modal__team{
+      max-width: 600px;
+    }
+    .team__slider-img img{
+      width: 600px;
+    }
+  }
+  @media (max-width: 810px){
+    .modal__team{
+      max-width: 500px;
+    }
+    .team__slider-img img{
+      width: 500px;
+    }
+    .modal__team-close{
+      right: 20px;
+    }
+  }
   @media (max-width: 768px) {
     .team__item-title {
       font-size: 27px;
       font-weight: 400;
       line-height: 42px;
+    }
+  }
+  @media (max-width: 720px){
+    .modal__team{
+      max-width: 450px;
+    }
+    .team__slider-img img{
+      width: 450px;
+    }
+    .team-arrow{
+      &-prew{
+        left: -70px;
+      }
+      &-next{
+        right: -70px;
+      }
+    }
+    .modal__team-close{
+      right: 10px;
+    }
+  }
+  @media (max-width: 586px){
+    .modal__team{
+      position: relative;
+    }
+    .modal__team-close{
+      border-radius: 100%;
+      top: 10px;
+      opacity: 0.8;
+    }
+    .team-arrow{
+      display: none!important;
+    }
+    .team__slider-img{
+      max-width: 560px;
+      width: 100%;
+    }
+    .team__slider-img img{
+      max-width: 100%;
+      width: 100%;
     }
   }
   @media (max-width: 500px) {
@@ -192,6 +302,18 @@
         line-height: 25px;
         gap: 10px;
       }
+    }
+  }
+  @media (max-width: 450px){
+    .modal__team{
+      position: static;
+    }
+    .modal__team-close{
+      top: 20px;
+    }
+    .team__slider-img{
+      max-width: 450px;
+      width: 100%;
     }
   }
 }
