--- a/app/scss/pages/team.scss
+++ b/app/scss/pages/team.scss
@@ -144,7 +144,7 @@
     .slick-slide{
     }
     &-img{
-      max-width: 560px!important;
+      max-width: 560px;
       width: 100%;
       height: 90vh;
       margin-right: 10px;
@@ -159,7 +159,7 @@
     .sertificat-arrow{
       position: absolute;
       width: 100px;
-      height: 100%;
+      height: 10%;
       z-index: 999;
       text-align: center;
       cursor: pointer;
@@ -169,19 +169,25 @@
         opacity: 1;
       }
       &-prew{
-        left: -100px;
-        top: 0;
+        left: -80px;
+        top: 50%;
+        transform: translateY(-50%);
+        padding-left: 20px;
       }
       &-next{
-        right: -100px;
-        top: 0;
+        right: -80px;
+        top: 50%;
+        transform: translateY(-50%);
+        padding-right: 20px;
         img{
           transform: rotate(180deg);
+          height: 100%;
         }
       }
     }
   }
-  .modal__team-close{
+  .modal__team-close,
+  .modal__sert-close{
     width: 50px;
     height: 50px;
     position: absolute;
@@ -230,6 +236,12 @@
     .modal__team-close{
       right: 20px;
     }
+    .sertificats__slider{
+      max-width: 500px;
+    }
+    .sertificats__slider-img{
+      max-width: 500px;
+    }
   }
   @media (max-width: 768px) {
     .team__item-title {
@@ -255,6 +267,39 @@
     }
     .modal__team-close{
       right: 10px;
+    }
+    .sertificats__slider-img{
+      max-width: 600px;
+    }
+  }
+  @media (max-width: 680px){
+    .modal__sert-close{
+      right: 20px;
+    }
+  }
+  @media (max-width: 650px){
+    .modal__sert-close{
+      right: 10px;
+    }
+    .sertificat-arrow{
+      &-prew{
+        left: -60px;
+      }
+      &-next{
+        right: -60px;
+      }
+    }
+    .modal__sert-close{
+      border-radius: 100%;
+      top: 10px;
+    }
+    .sertificats__slider-img{
+      height: 80vh;
+    }
+  }
+  @media (max-width: 600px){
+    .sertificat-arrow{
+      display: none!important;
     }
   }
   @media (max-width: 586px){
@@ -303,6 +348,18 @@
         gap: 10px;
       }
     }
+    .slick-list.draggable{
+      max-width:450px;
+      width: 100%;
+    }
+    .sertificats__slider-img{
+      max-width:450px;
+      width: 100%;
+    }
+    .sertificats__slider-img img{
+      max-width:450px;
+      width: 100%;
+    }
   }
   @media (max-width: 450px){
     .modal__team{
@@ -313,6 +370,60 @@
     }
     .team__slider-img{
       max-width: 450px;
+      width: 100%;
+    }
+    .slick-list.draggable{
+      max-width:400px;
+      width: 100%;
+    }
+    .sertificats__slider-img{
+      max-width:400px;
+      width: 100%;
+    }
+    .sertificats__slider-img img{
+      max-width:400px;
+      width: 100%;
+    }
+  }
+  @media (max-width: 450px){
+    .slick-list.draggable{
+      max-width:375px;
+      width: 100%;
+    }
+    .sertificats__slider-img{
+      max-width:375px;
+      width: 100%;
+    }
+    .sertificats__slider-img img{
+      max-width:375px;
+      width: 100%;
+    }
+  }
+  @media (max-width: 375px){
+    .slick-list.draggable{
+      max-width:350px;
+      width: 100%;
+    }
+    .sertificats__slider-img{
+      max-width:350px;
+      width: 100%;
+    }
+    .sertificats__slider-img img{
+      max-width:350px;
+      width: 100%;
+    }
+  }
+  @media (max-width: 350px){
+    .slick-list.draggable{
+      max-width:320px;
+      width: 100%;
+    }
+    .sertificats__slider-img{
+      max-width:320px;
+      width: 100%;
+    }
+    .sertificats__slider-img img{
+      max-width:320px;
       width: 100%;
     }
   }
