--- a/app/scss/header/header.scss
+++ b/app/scss/header/header.scss
@@ -221,7 +221,7 @@
   &__to-bottom {
     display: flex;
     justify-content: space-between;
-    border-top: 1px solid var(--color-contrast-high);
+    border-top: 1px solid #4d4e4f;
     padding-top: 40px;
     position: relative;
   }
