--- a/app/scss/pages/industry.scss
+++ b/app/scss/pages/industry.scss
@@ -31,7 +31,7 @@
       justify-content: space-between;
       padding-top: 37px;
       padding-bottom: 28px;
-      border-bottom: 1px solid var(--color-contrast-reverse);
+      border-bottom: 1px solid #4d4e4f;
       cursor: pointer;
       &:hover {
         .list-item__text {
