--- a/app/scss/pages/portfolio.scss
+++ b/app/scss/pages/portfolio.scss
@@ -13,7 +13,7 @@
   &__tab-row {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid var(--color-contrast-reverse);
+    border-bottom: 1px solid #4d4e4f;
   }
   &__tab-btn {
     font-weight: 400;
