--- a/app/scss/pages/clients.scss
+++ b/app/scss/pages/clients.scss
@@ -106,6 +106,9 @@
     transform: translate(-50%, -50%);
     transition: 0.3s;
     opacity: 0;
+    &.bazadance{
+      transform: translate(-50%, -58%);
+    }
   }
 }
 .clients.media {
