--- a/app/scss/pages/prices.scss
+++ b/app/scss/pages/prices.scss
@@ -83,13 +83,13 @@
       padding-bottom: 37px;
       position: relative;
       &::before {
-        position: absolute;
-        content: "";
-        right: 0;
-        bottom: 0;
-        width: 100%;
-        height: 1px;
-        background-color: #4d4e4f;
+        // position: absolute;
+        // content: "";
+        // right: 0;
+        // bottom: 0;
+        // width: 100%;
+        // height: 1px;
+        // background-color: #4d4e4f;
       }
       &__name {
         font-weight: 400;
@@ -136,6 +136,12 @@
       }
     }
     &.prices__item_first {
+      overflow: hidden;
+      position: sticky;
+      top: 82px;
+      background: #131313;
+      z-index: 25;
+      border: 1px solid #4d4e4f;
       .lite,
       .standart,
       .premium,
@@ -293,6 +299,9 @@
       padding-left: 20px;
       padding-right: 20px;
     }
+    .prices__item_first{
+      top: 62px;
+    }
     .prices__item {
       .lite,
       .standart,
@@ -336,7 +345,14 @@
   }
   @media (max-width: 1058px) {
     .prices__list {
-      width: 992px;
+      width: 1020px;
+      // overflow-y: scroll;
+    }
+    .prices__item_first{
+      width: 1020px;
+      // overflow: hidden;
+      top: 62px;
+      position: static;
     }
     .prices__inner {
       overflow-x: scroll;
