--- a/app/scss/pages/clients.scss
+++ b/app/scss/pages/clients.scss
@@ -136,7 +136,8 @@
   @media (max-width: 768px) {
     margin-bottom: 120px;
     .clients__item {
-      width: 200px;
+      max-width: 50%;
+      width: 100%;
       height: 200px;
     }
     .clients__logo {
@@ -147,14 +148,15 @@
     }
   }
   @media (max-width: 500px) {
+    // width: 434px;
     .container{
-      padding-right: 0;
+      padding-right: 20px;
+      padding-left: 20px;
       overflow: hidden;
     }
     .clients__title {
       font-size: 16px;
       line-height: 19px;
-      margin-right: 20px;
       padding-right: 20px;
       &::after{
         display: block;
@@ -169,23 +171,25 @@
   }
 }
 .clients__inner_mobile.clients-slider{
-  width: 520px;
+  // width: 520px;
   .slick-slide{
     display: flex;
     flex-wrap: wrap;
-    width: 520px;
+    justify-content: center;
+    // width: 520px;
     .clients__item{
-      width: 260px;
-      height: 260px;
+      // width: 260px;
+      // height: 260px;
     }
   }
-  @media (max-width: 375px){
-  width: 434px;
+  @media (max-width: 360px){
+  // width: 434px;
     .slick-slide{
-      width: 434px;
+      // width: 434px;
       .clients__item{
-        width: 217px;
-        height: 217px;
+        img{
+          width: 125px;
+        }
       }
     }
   }
