--- a/app/scss/pages/prices.scss
+++ b/app/scss/pages/prices.scss
@@ -117,7 +117,7 @@
           padding-right: 25px;
           display: inline-block;
           max-width: 230px;
-          &::after{
+          &::after {
             position: absolute;
             content: "";
             right: 0;
@@ -247,10 +247,10 @@
     }
     .slick-active {
       .prices__slide-top {
-        background: #D6D6D6;
-        color: #4D4E4F;
-        .prices__price{
-          color:#191919;
+        background: #d6d6d6;
+        color: #4d4e4f;
+        .prices__price {
+          color: #191919;
         }
       }
     }
@@ -262,7 +262,7 @@
     margin: 0 6px;
     width: 133px;
     transition: 0.3s;
-    color: #A4A6A9;
+    color: #a4a6a9;
     .prices__name {
       font-weight: 600;
       font-size: 12px;
@@ -299,7 +299,7 @@
       padding-left: 20px;
       padding-right: 20px;
     }
-    .prices__item_first{
+    .prices__item_first {
       top: 62px;
     }
     .prices__item {
@@ -348,7 +348,7 @@
       width: 1020px;
       // overflow-y: scroll;
     }
-    .prices__item_first{
+    .prices__item_first {
       width: 1020px;
       // overflow: hidden;
       top: 62px;
@@ -430,3 +430,117 @@
     width: 275px;
   }
 }
+
+.wrap {
+  position: relative;
+  margin: 10em auto 30em;
+  overscroll-behavior: contain;
+  color: #a4a6a9;
+  .track-name {
+    width: 288px;
+    flex-shrink: 0;
+    border-left: 1px solid #4d4e4f;
+    border-top: 1px solid #4d4e4f;
+  }
+  .title-track{
+    padding: 34px 10px 37px 20px;
+  }
+  .entry-name {
+    width: 288px;
+    flex-shrink: 0;
+    padding: 15px 24px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    align-items: center;
+    &:last-child{
+      border-bottom: 1px solid #4d4e4f;
+    }
+  }
+  .track-lite,
+  .track-standart,
+  .track-premium,
+  .track-express {
+    // max-width: 365px;
+    // width: 100%;
+    width: 182px;
+    border-left: 1px solid #4d4e4f;
+    border-top: 1px solid #4d4e4f;
+  }
+  .track-express{
+    border-right: 1px solid #4d4e4f;
+  }
+  .entry-lite,
+  .entry-standart,
+  .entry-premium,
+  .entry-express{
+    // padding: 0;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    &:last-child{
+      border-bottom: 1px solid #4d4e4f;
+    }
+  }
+}
+
+.headers {
+  top: 62px;
+  position: -webkit-sticky;
+  position: sticky;
+  z-index: 1;
+}
+
+.tracks,
+.scroller {
+  display: flex;
+  overflow-y: hidden;
+  -webkit-overflow-scrolling: touch;
+}
+
+.scroller {
+  overflow-x: hidden;
+}
+
+.tracks {
+  overflow: auto;
+  scroll-snap-type: x mandatory;
+}
+
+.scenes::-webkit-scrollbar,
+.scroller::-webkit-scrollbar {
+  display: none;
+}
+
+.track {
+  // flex: 1 0 calc(22% + 2px);
+  flex: 1 0 auto;
+  // scroll-snap-align: start;
+}
+
+.track + .track {
+  margin-left: -1px;
+}
+
+.heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  border-width: 0 1px;
+  z-index: 1;
+  font-weight: 700;
+}
+
+.entry {
+  // border: 1px solid #4d4e4f;
+  // border-top: 1px solid #4d4e4f;
+}
+
+// @media (max-width: 767px) {
+//   .track {
+//     flex: 1 0 calc(50% + 7px);
+//   }
+// }
