--- a/app/scss/pages/prices.scss
+++ b/app/scss/pages/prices.scss
@@ -356,6 +356,7 @@
     }
     .prices__inner {
       overflow-x: scroll;
+      display: none;
     }
     .prices__item {
       .lite,
@@ -432,18 +433,46 @@
 }
 
 .wrap {
+  display: none;
   position: relative;
-  margin: 10em auto 30em;
   overscroll-behavior: contain;
   color: #a4a6a9;
+  @media (max-width: 1058px){
+    display: block;
+  }
+  @media (max-width: 500px){
+    display: none;
+  }
   .track-name {
     width: 288px;
     flex-shrink: 0;
     border-left: 1px solid #4d4e4f;
-    border-top: 1px solid #4d4e4f;
   }
-  .title-track{
+  .title-track {
     padding: 34px 10px 37px 20px;
+    .rate {
+      display: flex;
+      flex-direction: column;
+      &__name {
+        margin-bottom: 11px;
+        font-size: 14px;
+        line-height: 17px;
+        margin-bottom: 11px;
+        font-weight: 400;
+        text-transform: uppercase;
+      }
+      &__price {
+        margin-bottom: 13px;
+        color: #f9f9f9;
+        font-size: 21.9183px;
+        line-height: 26px;
+      }
+      &__info {
+        color: #4d4e4f;
+        font-size: 14px;
+        line-height: 17px;
+      }
+    }
   }
   .entry-name {
     width: 288px;
@@ -453,7 +482,7 @@
     font-size: 16px;
     line-height: 19px;
     align-items: center;
-    &:last-child{
+    &:last-child {
       border-bottom: 1px solid #4d4e4f;
     }
   }
@@ -465,22 +494,33 @@
     // width: 100%;
     width: 182px;
     border-left: 1px solid #4d4e4f;
-    border-top: 1px solid #4d4e4f;
   }
-  .track-express{
+  .track-express {
     border-right: 1px solid #4d4e4f;
   }
   .entry-lite,
   .entry-standart,
   .entry-premium,
-  .entry-express{
+  .entry-express {
     // padding: 0;
     display: flex;
     align-items: center;
     padding-left: 20px;
-    &:last-child{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    align-items: center;
+    &:last-child {
       border-bottom: 1px solid #4d4e4f;
     }
+  }
+  .last-entry {
+    height: 111px;
+    border-top: 1px solid #4d4e4f;
+    padding-left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -489,6 +529,26 @@
   position: -webkit-sticky;
   position: sticky;
   z-index: 1;
+  background: #131313;
+  border-top: 1px solid #4d4e4f;
+  border-bottom: 1px solid #4d4e4f;
+  .rate__info-link {
+    color: #d6d6d6;
+    text-decoration: underline;
+    position: relative;
+    display: inline-block;
+    max-width: 230px;
+    font-weight: 400;
+    &::after {
+      position: absolute;
+      content: "";
+      right: 40px;
+      bottom: 0;
+      width: 16px;
+      height: 12px;
+      background-image: url(../img/prices/link-arrow.svg);
+    }
+  }
 }
 
 .tracks,
@@ -524,7 +584,6 @@
 
 .heading {
   display: flex;
-  justify-content: center;
   align-items: center;
   position: -webkit-sticky;
   position: sticky;
