--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,7 +6,7 @@ body {
   // font-family: 'RF Dewi Expanded', Arial, sans-serif;
   font-family: RFDewi, Arial, sans-serif;
   font-weight: bold;
-  background-color: var(--bg);
+  background-color: #131313;
   transition: .3s;
 }
 .container{
@@ -21,8 +21,10 @@ body {
   display: block;
 }
 .tab-filter.tab--active{
-  color: var(--filter-active)!important;
-  border-color: var(--filter-active)!important;
+  // color: var(--filter-active)!important;
+  // border-color: var(--filter-active)!important;
+  color: #c2c6cb!important;
+  border-color: #c2c6cb!important;
 }
 .cases-button.tabs-navigation__item--active{
   color: #C2C6CB;
