--- a/app/scss/pages/team.scss
+++ b/app/scss/pages/team.scss
@@ -33,7 +33,7 @@
     max-width: 480px;
     width: 100%;
     padding: 17px 19px 19px 21px;
-    background: var(--team);
+    background: #191919;
     color: #a4a6a9;
     border-radius: 20px;
     display: flex;
