--- a/app/scss/header/header.scss
+++ b/app/scss/header/header.scss
@@ -45,14 +45,13 @@
     }
   }
   .header__logo_dark {
-    opacity: var(--opacity-logo-dark);
+    opacity: 1;
   }
   .header__logo_light {
-    opacity: var(--opacity-logo-light);
+    opacity: 0;
   }
   .mobile-btn-wrapper {
     padding: 12px 20px;
-    background: var(--line-bg);
     position: fixed;
     right: 10px;
     top: 0;
@@ -71,7 +70,7 @@
     span {
       width: 24px;
       height: 3px;
-      background: var(--menu-btn);
+      background: #ffffff;
       transition: 0.3s;
     }
     &.active {
@@ -92,10 +91,9 @@
   }
   .nav {
     position: fixed;
-    background: var(--line-bg);
+    background: #000000;
     right: 0;
-    top: -30px;
-    max-width: 375px;
+    top: 0;
     width: 100%;
     height: 100vh;
     padding-top: 125px;
@@ -156,7 +154,7 @@
         font-weight: 400;
         font-size: 14px;
         line-height: 17px;
-        color: var(--color--contrast-low);
+        color: #d6d6d6;
       }
     }
     &__logo {
@@ -171,7 +169,7 @@
       font-weight: 400;
       font-size: 18px;
       line-height: 22px;
-      color: var(--color--contrast-low);
+      color: #d6d6d6;
     }
   }
   &__links {
@@ -192,7 +190,7 @@
     padding: 10px 40px;
     border: 1px solid #4d4e4f;
     color: #d6d6d6;
-    background-color: var(--bg);
+    background-color: #131313;
     border-radius: 123px;
     font-weight: 400;
     font-size: 18px;
