--- a/app/scss/pages/prices.scss
+++ b/app/scss/pages/prices.scss
@@ -17,7 +17,7 @@
     overflow: hidden;
   }
   &__item {
-    color: var(--list);
+    color: #a4a6a9;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
@@ -26,11 +26,11 @@
     transition: 0.3s;
     padding-left: 24px;
     &:hover {
-      background: var(--list-hover);
+      background: #1b1b1b;
     }
     &_first {
       &:hover {
-        background: var(--bg);
+        background: #131313;
       }
     }
     &-name {
@@ -149,7 +149,6 @@
         &.rate {
           height: 190px;
           padding-right: 10px;
-          background-color: var(--bg);
         }
       }
     }
@@ -180,8 +179,8 @@
   }
   &__btn {
     padding: 16px 30px;
-    background: var(--color-contrast-high2);
-    color: var(--color--contrast-bgg);
+    background: #c2c6cb;
+    color: #272727;
     border-radius: 10px;
     font-size: 20px;
     line-height: 24px;
@@ -204,7 +203,7 @@
     }
     .slide-bottom {
       &__name {
-        color: var(--bg-panel4d4e4f);
+        color: #ffffff;
         font-weight: 400;
         font-size: 20px;
         line-height: 24px;
@@ -212,7 +211,7 @@
         margin-bottom: 27px;
       }
       &__list {
-        background-color: var(--color--contrast-higher);
+        background-color: #282828;
         border-radius: 10px;
         padding: 16px 18px 21px 15px;
         color: #a4a6a9;
@@ -229,7 +228,7 @@
       }
       &__btn {
         display: block;
-        background: var(--color-contrast-high);
+        background: #c2c6cb;
         color: #1c1e21;
         font-size: 20px;
         line-height: 24px;
@@ -286,7 +285,7 @@
       text-transform: uppercase;
     }
     &-sale {
-      color: var(--color-contrast-high);
+      color: #c2c6cb;
       font-weight: 700;
       font-size: 20px;
       line-height: 24px;
@@ -378,7 +377,7 @@
       line-height: 19px;
       margin-bottom: 27px;
       padding-bottom: 15px;
-      border-bottom: 1px solid var(--color-contrast-high);
+      border-bottom: 1px solid #c2c6cb;
     }
     .prices__inner {
       display: none;
@@ -411,7 +410,7 @@
   &__input {
     width: 100%;
     height: 42px;
-    border-bottom: 1px solid var(--color-contrast-high);
+    border-bottom: 1px solid #c2c6cb;
     margin-bottom: 45px;
   }
   &__btn {
