--- a/app/scss/header/header.scss
+++ b/app/scss/header/header.scss
@@ -57,7 +57,7 @@
     top: 0;
     border-radius: 0px 0px 0px 5px;
     display: none;
-    z-index: 10;
+    z-index: 15;
   }
   .nav-mobile-btn {
     width: 37px;
@@ -94,17 +94,19 @@
     background: #000000;
     right: 0;
     top: 0;
-    width: 100%;
-    height: 100vh;
+    left: 0;
+    bottom: 0;
     padding-top: 125px;
     padding-left: 20px;
     transform: translateY(-100vh);
     transition: 0.3s;
     transition-delay: 0.3s;
-    z-index: 5;
+    z-index: 14;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-x: hidden;
+    overflow-y: auto;
     &.active {
       transform: translateY(0);
       transition: 0.3s;
@@ -243,7 +245,7 @@
         top: 0;
         display: flex;
         gap: 21px;
-        opacity: var(--opacity-arrow-dark);
+        opacity: 1;
         transition: 0.3s;
       }
       .arrows-light {
@@ -252,7 +254,7 @@
         top: 0;
         display: flex;
         gap: 21px;
-        opacity: var(--opacity-arrow-light);
+        opacity: 0;
         transition: 0.3s;
       }
     }
@@ -278,14 +280,14 @@
         position: absolute;
         left: 0;
         top: 0;
-        opacity: var(--opacity-arrow-dark);
+        opacity: 1;
         transition: 0.3s;
       }
       .arrow-light {
         position: absolute;
         left: 0;
         top: 0;
-        opacity: var(--opacity-arrow-light);
+        opacity: 0;
         transition: 0.3s;
       }
     }
@@ -416,23 +418,22 @@
     }
   }
   @media (max-width: 768px) {
-    height: auto;
+    // height: auto;
     .container {
-      height: auto;
+      // height: auto;
     }
     .header__logo {
       width: 120px;
       height: 19px;
     }
     .header__top {
-      margin-bottom: 90px;
+      margin-bottom: 20%;
     }
     .header__title {
-      margin-bottom: 90px;
+      margin-bottom: 20%;
     }
     .header__services {
       position: static;
-      margin-bottom: 155px;
     }
     .header__service {
       margin-right: 0;
@@ -445,14 +446,86 @@
       display: flex;
       flex-direction: column-reverse;
       align-items: center;
-      position: static;
-      transform: translateX(0);
+      width: 100%;
+      bottom: 80px;
       .link-phone {
         margin-right: 0;
       }
       .request-btn {
         margin-bottom: 11px;
       }
+    }
+    .header__services-row{
+      align-items: flex-start;
+    }
+  }
+  @media (max-height: 794px){
+    .header__top {
+      margin-bottom: 17%;
+    }
+    .header__title {
+      margin-bottom: 17%;
+    }
+  }
+  @media (max-height: 767px){
+    .header__top {
+      margin-bottom: 14%;
+    }
+    .header__title {
+      margin-bottom: 14%;
+    }
+  }
+  @media (max-height: 745px){
+    .header__top {
+      margin-bottom: 11%;
+    }
+    .header__title {
+      margin-bottom: 11%;
+    }
+  }
+  @media (max-height: 724px){
+    .header__top {
+      margin-bottom: 10%;
+    }
+    .header__title {
+      margin-bottom: 10%;
+    }
+    .header__service{
+      margin-bottom: 0!important;
+    }
+    .header__services-row{
+      gap: 14px;
+    }
+    .header__services{
+      gap: 14px;
+    }
+  }
+  @media (max-height: 710px){
+    .header__top {
+      margin-bottom: 8%;
+    }
+    .header__title {
+      margin-bottom: 8%;
+    }
+    .header__services-row{
+      gap: 12px;
+    }
+    .header__services{
+      gap: 12px;
+    }
+  }
+  @media (max-height: 685px){
+    .header__top {
+      margin-bottom: 6%;
+    }
+    .header__title {
+      margin-bottom: 6%;
+    }
+    .header__services-row{
+      gap: 10px;
+    }
+    .header__services{
+      gap: 10px;
     }
   }
   @media (max-width: 630px) {
