--- a/app/scss/pages/prices.scss
+++ b/app/scss/pages/prices.scss
@@ -56,7 +56,7 @@
     .standart,
     .premium,
     .express {
-      width: 362px;
+      width: 365px;
       position: relative;
       height: 100%;
       padding-left: 37px;
@@ -73,6 +73,7 @@
     .express {
       &::after {
         right: -6px;
+        display: none;
       }
     }
     .rate {
@@ -156,7 +157,7 @@
   &__buttons {
     position: relative;
     &:hover {
-      background: var(--bg);
+      background: #131313;
     }
     &::before {
       position: absolute;
