--- a/app/scss/pages/industry.scss
+++ b/app/scss/pages/industry.scss
@@ -6,7 +6,7 @@
     padding-right: 80px;
   }
   &__inner {
-    border-top: 1px solid var(--color-contrast-reverse);
+    border-top: 1px solid #4d4e4f;
     display: flex;
     justify-content: space-between;
   }
