--- a/app/scss/pages/reviews.scss
+++ b/app/scss/pages/reviews.scss
@@ -34,7 +34,7 @@
     gap: 50px;
   }
   &__item {
-    color: var(--color-contrast-high);
+    color: #c2c6cb;
     cursor: pointer;
     &:hover{
       .youtube-icon{
@@ -96,9 +96,9 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
-    color: var(--color-contrast-high);
+    color: #c2c6cb;
     padding: 10px 24px;
-    border: 1px solid var(--color-contrast-high);
+    border: 1px solid #c2c6cb;
     border-radius: 123px;
     cursor: pointer;
   }
