--- a/app/scss/pages/services-new.scss
+++ b/app/scss/pages/services-new.scss
@@ -27,7 +27,7 @@
     font-size: 74px;
     line-height: 89px;
     width: 100%;
-    color: var(--color--contrast);
+    color: #4d4e4f;
     flex: 1;
     z-index: 2;
     transition: 0.3s;
@@ -46,7 +46,7 @@
       }
       &:nth-child(2) {
         opacity: 0;
-        color: var(--menu-btn);
+        color: #ffffff;
         font-size: 100px;
         font-weight: 800;
         @media (max-width: 744px) {
